Fixed Issue with Flash Messages not showing up because of locking the nav bar to the top where flash messages would show. I decided to just add a margin so the Flash Messages show below the nav bar now.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,11 +4,16 @@
   width: 100%;
   z-index: 100;
 }
+#flashMessageContainer {
+  margin-top: 60px;
+  
+}
+
 #userHeaderDisplay {
   font-size: 120%;
 }
 .jumbotron {
-  margin-top: 6em;
+  margin-top: 2em;
 }
 
 
